@@ -1,4 +1,5 @@
 [Michele Simionato]
+  * Avoided saving the ruptures when ground_motion_fields is True
   * Restored a weight of 1 for each rupture in the event based calculator
   * Removed the MultiHazardCurveXMLWriter
   * Improved the saving of the ruptures in event based calculations
